# cursedforged

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
cursedforged/api/: base.py  client.py
cursedforged/api/v1/: __init__.py
cursedforged/api/v2/: __init__.py
cursedforged/types/: __init__.py  category.py  enums.py  files.py  fingerprints.py  games.py  minecraft.py  mods.py  responses.py
